--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ flutter:
   assets:
     - assets/logo.png
     - assets/nfts/first_nft.png
+    - assets/nfts/second_nft.png
+    - assets/nfts/third_nft.png
+    - assets/nfts/fourth_nft.png
+    - assets/nfts/fifth_nft.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
